--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
 
+<head>
+  <title>Plataformas Moviles</title>
+</head>
+
+<body>
+    <ul id="container" class="container">
+      <li> <a href="notificaciones/index.html">TP1 - HTML y GitHub</a></li>
+    </ul>
+</body>
+</html>
