--- a/notificaciones/index.html
+++ b/notificaciones/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Notificaciones HTML5</title>
+  <title>Notificaciones de pedidos</title>
 </head>
 <body>
   
