--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <ul id="container" class="container">
-      <li> <a href="notificaciones/index.html">TP1 - HTML y GitHub</a></li>
+      <li> <a href="notificaciones/index.html">Notificaciones de pedidos</a></li>
     </ul>
 </body>
 </html>
